--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
                 <a class="nav-link cor-link" href="./lista-alunos.html">ALUNOS</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link cor-link" href="#">LOCAÇÕES</a>
+                <a class="nav-link cor-link" href="./lista-locacao.html">LOCAÇÕES</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle cor-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
                     aria-expanded="false">CADASTROS</a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">LIVROS</a>
-                    <a class="dropdown-item" href="#">ALUNOS</a>
-                    <a class="dropdown-item" href="#">LOCAÇÕES</a>
+                    <a class="dropdown-item" href="./cadastro_livro.html">LIVROS</a>
+                    <a class="dropdown-item" href="./cadastro_aluno.html">ALUNOS</a>
+                    <a class="dropdown-item" href="./cadastro_locacao.html">LOCAÇÕES</a>
                 </div>
             </li>
         </ul>
