--- a/lista-alunos.html
+++ b/lista-alunos.html
@@ -20,37 +20,28 @@
         <div class="row pt-5">
             <div class="col-4">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                    <img class="card-img-top" src="./img/alunos/pexels-justin-shaifer-501272-1222271.jpg" alt="Imagem de capa do card">
                     <div class="card-body">
-                        <h5 class="card-title">Pequeno Principe</h5>
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer
-                            preencher o
-                            conteúdo do card.</p>
-                        <a href="#" class="btn btn-primary">Alocar</a>
+                        <h5 class="card-title">João Guilherme</h5>
+                        <p class="card-text">CURSO: GTI <BR> RA: 0200782323001 <BR> CPF: 123.456.789-10</p>
                     </div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                    <img class="card-img-top" src="./img/alunos/pexels-olly-3767392.jpg" alt="Imagem de capa do card">
                     <div class="card-body">
-                        <h5 class="card-title">Pequeno Principe</h5>
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer
-                            preencher o
-                            conteúdo do card.</p>
-                        <a href="#" class="btn btn-primary">Alocar</a>
+                        <h5 class="card-title">Maria Alice</h5>
+                        <p class="card-text">CURSO: GPI <BR> RA: 0200782323002 <BR> CPF: 123.456.789-10.</p>
                     </div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                    <img class="card-img-top" src="./img/alunos/pexels-olly-3768689.jpg" alt="Imagem de capa do card">
                     <div class="card-body">
-                        <h5 class="card-title">Pequeno Principe</h5>
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer
-                            preencher o
-                            conteúdo do card.</p>
-                        <a href="#" class="btn btn-primary">Alocar</a>
+                        <h5 class="card-title">Pedro Hugo</h5>
+                        <p class="card-text">CURSO: GTI <BR> RA: 0200782323003 <BR> CPF: 123.456.789-10</p>
                     </div>
                 </div>
             </div>
@@ -59,37 +50,28 @@
         <div class="row pt-5">
             <div class="col-4">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                    <img class="card-img-top" src="./img/alunos/pexels-olly-3777943.jpg" alt="Imagem de capa do card">
                     <div class="card-body">
-                        <h5 class="card-title">Pequeno Principe</h5>
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer
-                            preencher o
-                            conteúdo do card.</p>
-                        <a href="#" class="btn btn-primary">Alocar</a>
+                        <h5 class="card-title">Cristian Ribeiro</h5>
+                        <p class="card-text">CURSO: LOGISTICA <BR> RA: 0200782323004 <BR> CPF: 123.456.789-10</p>
                     </div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                    <img class="card-img-top" src="./img/alunos/pexels-olly-3785843.jpg" alt="Imagem de capa do card">
                     <div class="card-body">
-                        <h5 class="card-title">Pequeno Principe</h5>
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer
-                            preencher o
-                            conteúdo do card.</p>
-                        <a href="#" class="btn btn-primary">Alocar</a>
+                        <h5 class="card-title">Maria Victoria</h5>
+                        <p class="card-text">CURSO: LOGISTICA <BR> RA: 0200782323005 <BR> CPF: 123.456.789-10</p>
                     </div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                    <img class="card-img-top" src="./img/alunos/pexels-olly-3786525.jpg" alt="Imagem de capa do card">
                     <div class="card-body">
-                        <h5 class="card-title">Pequeno Principe</h5>
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer
-                            preencher o
-                            conteúdo do card.</p>
-                        <a href="#" class="btn btn-primary">Alocar</a>
+                        <h5 class="card-title">Ana Luísa</h5>
+                        <p class="card-text">CURSO: GPI <BR> RA: 0200782323006 <BR> CPF: 123.456.789-10</p>
                     </div>
                 </div>
             </div>
@@ -98,37 +80,28 @@
         <div class="row pt-5">
             <div class="col-4">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                    <img class="card-img-top" src="./img/alunos/pexels-olly-3789888.jpg" alt="Imagem de capa do card">
                     <div class="card-body">
-                        <h5 class="card-title">Pequeno Principe</h5>
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer
-                            preencher o
-                            conteúdo do card.</p>
-                        <a href="#" class="btn btn-primary">Alocar</a>
+                        <h5 class="card-title">Julio Moratelli</h5>
+                        <p class="card-text">CURSO: GTI <BR> RA: 0200782323007 <BR> CPF: 123.456.789-10</p>
                     </div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                    <img class="card-img-top" src="./img/alunos/pexels-olly-3812720.jpg" alt="Imagem de capa do card">
                     <div class="card-body">
-                        <h5 class="card-title">Pequeno Principe</h5>
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer
-                            preencher o
-                            conteúdo do card.</p>
-                        <a href="#" class="btn btn-primary">Alocar</a>
+                        <h5 class="card-title">Ana Lis</h5>
+                        <p class="card-text">CURSO: GTI <BR> RA: 0200782323008 <BR> CPF: 123.456.789-10</p>
                     </div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                    <img class="card-img-top" src="./img/alunos/pexels-olly-762020.jpg" alt="Imagem de capa do card">
                     <div class="card-body">
-                        <h5 class="card-title">Pequeno Principe</h5>
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer
-                            preencher o
-                            conteúdo do card.</p>
-                        <a href="#" class="btn btn-primary">Alocar</a>
+                        <h5 class="card-title">Ana Laura</h5>
+                        <p class="card-text">CURSO: MEIO AMBIENTE <BR> RA: 0200782323009 <BR> CPF: 123.456.789-10</p>
                     </div>
                 </div>
             </div>
