--- a/lista-livros.html
+++ b/lista-livros.html
@@ -23,75 +23,36 @@
         <div class="row pt-5">
             <div class="col-4">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                    <img class="card-img-top" src="./img/199b90_00a165cfe08343c49dfbfe45beae101f~mv2.webp" alt="Imagem de capa do card">
                     <div class="card-body">
-                        <h5 class="card-title">Pequeno Principe</h5>
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer
-                            preencher o
-                            conteúdo do card.</p>
+                        <h5 class="card-title">Uma introdução a ética Evolutiva</h5>
+                        <p class="card-text">Editora: Rocco <br>
+                            Genero: Ciêntifico <br>
+                            ISBN: 978-65-89999-01-3.
                         <a href="#" class="btn btn-primary">Alocar</a>
                     </div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                    <img class="card-img-top" src="./img/199b90_18284568be554210929b10fe73554afd~mv2.webp" alt="Imagem de capa do card">
                     <div class="card-body">
-                        <h5 class="card-title">Pequeno Principe</h5>
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer
-                            preencher o
-                            conteúdo do card.</p>
+                        <h5 class="card-title">Eu incentivo a cultura</h5>
+                        <p class="card-text">Editora: Rocco <br>
+                            Genero: Educativo <br>
+                            ISBN: 978-35-7899-08-3.
                         <a href="#" class="btn btn-primary">Alocar</a>
                     </div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                    <img class="card-img-top" src="./img/199b90_4bba5fc6302a475d945cad0b2362b01b~mv2.webp" alt="Imagem de capa do card">
                     <div class="card-body">
-                        <h5 class="card-title">Pequeno Principe</h5>
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer
-                            preencher o
-                            conteúdo do card.</p>
-                        <a href="#" class="btn btn-primary">Alocar</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="row pt-5">
-            <div class="col-4">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
-                    <div class="card-body">
-                        <h5 class="card-title">Pequeno Principe</h5>
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer
-                            preencher o
-                            conteúdo do card.</p>
-                        <a href="#" class="btn btn-primary">Alocar</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
-                    <div class="card-body">
-                        <h5 class="card-title">Pequeno Principe</h5>
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer
-                            preencher o
-                            conteúdo do card.</p>
-                        <a href="#" class="btn btn-primary">Alocar</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-4">
-                <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
-                    <div class="card-body">
-                        <h5 class="card-title">Pequeno Principe</h5>
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer
-                            preencher o
-                            conteúdo do card.</p>
+                        <h5 class="card-title">Crítica à pseudociência em educação especial</h5>
+                        <p class="card-text">Editora: Globo <br>
+                            Genero: Politica <br>
+                            ISBN: 978-12-8912-04-3.
                         <a href="#" class="btn btn-primary">Alocar</a>
                     </div>
                 </div>
@@ -101,36 +62,76 @@
         <div class="row pt-5">
             <div class="col-4">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                    <img class="card-img-top" src="./img/199b90_4bba5fc6302a475d945cad0b2362b01b~mv2.webp" alt="Imagem de capa do card">
                     <div class="card-body">
-                        <h5 class="card-title">Pequeno Principe</h5>
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer
-                            preencher o
-                            conteúdo do card.</p>
+                        <h5 class="card-title">Cinema contra homofobia
+                        </h5>
+                        <p class="card-text">Editora: Alta Books <br>
+                            Genero: Classe social <br>
+                            ISBN: 98-84-1523-01-3. <br>
                         <a href="#" class="btn btn-primary">Alocar</a>
                     </div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                    <img class="card-img-top" src="./img/199b90_5385880059f94706811af0a30faa7226~mv2.webp" alt="Imagem de capa do card">
                     <div class="card-body">
-                        <h5 class="card-title">Pequeno Principe</h5>
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer
-                            preencher o
-                            conteúdo do card.</p>
+                        <h5 class="card-title">Eu quântico</h5>
+                        <p class="card-text">Editora: Rocco <br>
+                            Genero: Ciêntifico <br>
+                            ISBN: 78-105-899-08-34.
                         <a href="#" class="btn btn-primary">Alocar</a>
                     </div>
                 </div>
             </div>
             <div class="col-4">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src=".../100px180/" alt="Imagem de capa do card">
+                    <img class="card-img-top" src="./img/uni.webp" alt="Imagem de capa do card">
                     <div class="card-body">
-                        <h5 class="card-title">Pequeno Principe</h5>
-                        <p class="card-text">Um exemplo de texto rápido para construir o título do card e fazer
-                            preencher o
-                            conteúdo do card.</p>
+                        <h5 class="card-title">O Unicornio</h5>
+                        <p class="card-text">Editora: Rocco <br>
+                            Genero: Ciêntifico <br>
+                            ISBN: 978-65-89999-01-3.
+                        <a href="#" class="btn btn-primary">Alocar</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="row pt-5">
+            <div class="col-4">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="./img/199b90_77173df918d0430db318e673ce502c1c~mv2.webp" alt="Imagem de capa do card">
+                    <div class="card-body">
+                        <h5 class="card-title">Covid-19 Ajude seu corpo a lutar contra o virus</h5>
+                        <p class="card-text">Editora: Rocco <br>
+                            Genero: Ciêntifico <br>
+                            ISBN: 978-65-89999-05-3.
+                        <a href="#" class="btn btn-primary">Alocar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="./img/199b90_c4bebaa65b8744329b8dec7bb15cfc8d~mv2.webp" alt="Imagem de capa do card">
+                    <div class="card-body">
+                        <h5 class="card-title">Ética e Democracia Enomica</h5>
+                        <p class="card-text">Editora: Rocco <br>
+                            Genero: Economia <br>
+                            ISBN: 985-65-89999-01-3.
+                        <a href="#" class="btn btn-primary">Alocar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-4">
+                <div class="card" style="width: 18rem;">
+                    <img class="card-img-top" src="./img/199b90_c620fd6152734d9982ebd26ff0a31e19~mv2.webp" alt="Imagem de capa do card">
+                    <div class="card-body">
+                        <h5 class="card-title">Heróis do Brasil?</h5>
+                        <p class="card-text">Editora: Globo <br>
+                            Genero: História <br>
+                            ISBN: 985-65-87849-01-3.
                         <a href="#" class="btn btn-primary">Alocar</a>
                     </div>
                 </div>
